# trellis-toy-rs

./: Cargo.toml
src/: gol.rs  init.rs  main.rs  menu.rs
